[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nyumba-mcp"
version = "0.1.0"
description = "MCP server for Kenya housing — rental market, tenant rights, building permits, affordable housing programs, and housing finance. 5 tools."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["fastmcp>=0.9", "pydantic>=2.0"]

[project.scripts]
nyumba-mcp = "nyumba_mcp.server:mcp.run"

[tool.setuptools.packages.find]
where = ["src"]
