[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nyumba-mcp"
version = "0.1.4"
description = "MCP server for Kenya housing — rental market, tenant rights, building permits, affordable housing programs, and housing finance. 5 tools."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["fastmcp>=0.9", "pydantic>=2.0"]

[project.scripts]
nyumba-mcp = "nyumba_mcp.server:mcp.run"

[project.urls]
Homepage = "https://github.com/gabrielmahia/nyumba-mcp"
Documentation = "https://github.com/gabrielmahia/nairobi-stack"
"MCP Registry" = "https://registry.modelcontextprotocol.io"
Datasets = "https://huggingface.co/gmahia"
Evaluation = "https://github.com/gabrielmahia/kipimo"
[tool.setuptools.packages.find]
where = ["src"]
